Fixed scrollbar issue.

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -56,28 +56,3 @@
 img {
   -webkit-tap-highlight-color: transparent;
 }
-
-/* Custom thin scrollbar */
-.custom-scrollbar::-webkit-scrollbar {
-  width: 6px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  background: #555;
-  border-radius: 10px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #888;
-}
-
-.custom-scrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-/* Firefox support */
-.custom-scrollbar {
-  scrollbar-width: thin;
-  scrollbar-color: #555 transparent;
-}
-
